# fangcun

./: .env.example  .gitignore  .vercelignore  API.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  USERGUIDE.md  api_keys.py  app.py  build_allusion_db.py  build_phrase_db.py  checker.py  cli.py  config_loader.py  dict_db.py  dict_prototype.py  package-lock.json  package.json  prebuild.py  pyproject.toml  requirements.txt  test_api.sh  vercel.json  南洋吟游·诗词创作画布PRD.md  词语库构建设计.md  韵部查找功能设计.md
.claude/: settings.json
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle  proguard-rules.pro
api/: debug.py  index.py  requirements.txt
docs/: cli-test-report.md
fonts/: split.mjs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  lunar-javascript.d.ts  main.tsx
frontend/src/components/: AllusionPopup.tsx  Dictionary.tsx  ExportPreview.tsx  FreeEditor.tsx  GenreSelector.tsx  GridCell.tsx  GridEditor.tsx  ImportPoemModal.tsx  InspirationBoard.tsx  MetadataEditor.tsx  MetadataPopover.tsx  RhymePanel.tsx  TopBar.tsx
frontend/src/context/: BoardContext.tsx
static/: dashboard.html  docs.html
static/config/: allusion_index.json  char_definitions.json  char_dict.json  phrase_tongwei.json  pingshuiyun_color.xlsx  rhyme_books.json  shi_rules.json  t2s_map.json
templates/: _footer_mobile.html  _header_mobile.html  _right_sidebar_content.html  _sidebar_left.html  _sidebar_right.html  nanyang-pre.html  nanyang.html  nanyang_refactored.html
tests/: test_cli.py
(+19 files in other folders)
